squid.deployment.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: squid-proxy
  namespace: infra
spec:
  containers:
  - name: squid
    image: docker.ellisbs.co.uk:5000/k8s_squid:6.6.1
    ports:
    - containerPort: 3128
    volumeMounts:
      - name: squid-data
        mountPath: /var/cache/squid
  dnsConfig:
    nameservers:
    - 8.8.8.8
    - 8.8.4.4
  hostNetwork: true  # Use the host's network namespace
  hostPID: true       # Use the host's PID namespace
  hostIPC: true       # Use the host's IPC namespace
  volumes:
    - name: squid-data
      persistentVolumeClaim:
        claimName: squid-data
