squid.service.yml
apiVersion: v1
kind: Service
metadata:
  name: squid-proxy
  namespace: infra
spec:
  type: NodePort
  selector:
    app: squid-proxy
  ports:
    - protocol: TCP
      port: 3128
      targetPort: 3128
